--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,31 @@
 <p>{{titulo}}</p>
 
-<mat-form-field appearance="fill">
-  <mat-label>Nome</mat-label>
-  <input matInput [(ngModel)]="usuario.nome" placeholder="digite o nome">
-</mat-form-field>
+<mat-card class="mat-card-usuario">
+  <mat-card-header class="card-usuario-header">
+    <mat-card-title id="card-title">Inserir novo usuário</mat-card-title>
+  </mat-card-header>
+  <mat-card-content class="card-usuario-content">
+    <mat-form-field appearance="fill" class="field-margin">
+      <mat-label>Nome</mat-label>
+      <input matInput [(ngModel)]="usuario.nome" placeholder="digite o nome">
+      </mat-form-field>
 
-<mat-form-field appearance="fill">
-  <mat-label>CPF</mat-label>
-  <input matInput [(ngModel)]="usuario.cpf" placeholder="digite o cpf">
-</mat-form-field>
+    <mat-form-field appearance="fill" class="field-margin">
+      <mat-label>CPF</mat-label>
+      <input matInput [(ngModel)]="usuario.cpf" placeholder="digite o cpf">
+      </mat-form-field>
 
-<mat-form-field appearance="fill">
-  <mat-label>Idade</mat-label>
-  <input matInput [(ngModel)]="usuario.idade" placeholder="digite a idade">
-</mat-form-field>
-
-<button mat-raised-button mat-icon-button color="primary" (click)="inserirUsuario()">
-  <mat-icon>add</mat-icon>
-</button>
-
+    <mat-form-field appearance="fill"class="field-margin">
+      <mat-label>Idade</mat-label>
+      <input matInput [(ngModel)]="usuario.idade" placeholder="digite a idade">
+      </mat-form-field>
+    </mat-card-content>
+    <mat-card-footer class="footer-usuario">
+      <button mat-raised-button mat-icon-button color="primary" (click)="inserirUsuario()"  class="button-add">
+        <mat-icon>add</mat-icon>
+      </button>
+    </mat-card-footer>  
+</mat-card>
 <br>
 
 <mat-card *ngFor="let usuario of usuarios" class="mat-card-simples">
