--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,30 +4,36 @@
   margin-top: 10px;
 }
 
-.mat-card-usuario{
-  background-color: rgb(188, 199, 198);
+.mat-card-usuario {
+  background-color: rgb(230, 187, 187);
   max-width: 400px;
   display: flex;
   justify-content: center;
   flex-direction: column;
-  margin:auto;
+  margin: auto;
 }
 
-.footer-usuario{
+.footer-usuario {
   display: flex;
   justify-content: flex-end;
   margin: 3px;
 }
 
-.card-usuario-content{
+.button-add:hover {
+  background-color: rgb(10, 148, 56);
+}
+
+.card-usuario-content {
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
-.card-usuario-header{
+
+.card-usuario-header {
   align-self: center;
   margin: 30px;
 }
-.field-margin{
+
+.field-margin {
   margin-top: 20px;
 }
